# green-iot-4all

./: .gitignore  README.md  index.md
.github/workflows/: docker.yml  main.yml
assets/: architecture-setup.excalidraw  node-env-01.HEIC  node-env-02.HEIC
docker/rust_armv6/: Dockerfile
docker/ubuntu/: Dockerfile  config
docker/ubuntu-16.04/: Dockerfile
docs/: architecture-setup.excalidraw  cleaclear.html  software-architecture.excalidraw
firmware/arduino-nano/: README.md  node-env.ino  node-root.ino
firmware/raspberry-pi-zero-w/: README.md
firmware/raspberry-pi-zero-w/ms-01-azure-gateway/: Cargo.toml  README.md
firmware/raspberry-pi-zero-w/ms-01-azure-gateway/.cargo/: config
firmware/raspberry-pi-zero-w/ms-01-azure-gateway/config/: ms01config.toml
firmware/raspberry-pi-zero-w/ms-01-azure-gateway/install/: ms-01-azure-gateway.service  postinst  preinst  prerm
firmware/raspberry-pi-zero-w/ms-01-azure-gateway/src/: imp.rs  main.rs
firmware/raspberry-pi-zero-w/ms-01-azure-gateway/src/imp/: config.rs  sensordata.rs
firmware/raspberry-pi-zero-w/ms-02-data-collector/: Cargo.toml  README.md
firmware/raspberry-pi-zero-w/ms-02-data-collector/config/: ms02config.toml  sensor-data.json
firmware/raspberry-pi-zero-w/ms-02-data-collector/install/: ms-02-data-collector.service  postinst  preinst  prerm
firmware/raspberry-pi-zero-w/ms-02-data-collector/src/: imp.rs  main.rs
firmware/raspberry-pi-zero-w/ms-02-data-collector/src/imp/: config.rs  logs.rs  radiotransmit.rs
firmware/raspberry-pi-zero-w/ms-03-frontend/: Cargo.toml  README.md
firmware/raspberry-pi-zero-w/ms-03-frontend/src/: main.rs
firmware/raspberry-pi-zero-w/ms-03-frontend/templates/: index.html
firmware/raspberry-pi-zero-w/utils/: Dockerfile  README.md  config  setup.sh
firmware/raspberry-pi-zero-w/utils/rust_armv6/: Dockerfile  README.md
firmware/raspberry-pi-zero-w/utils/ubuntu/: Dockerfile
hardware/: README.md
hardware/node-env-shield/: 1-PCB_PCB_NodeEnvironment_shield.json  1-Schematic_NodeEnvironment shield.json
hardware/node-env-shield/production/: BOM_PCB_NodeEnvironment copy_2021-06-18.csv  PickAndPlace_PCB_NodeEnvironment copy_2021-06-18.csv
hardware/node-root-shield/: 1-PCB_PCB_NodeGateway.json  1-Schematic_NodeGateway_shield.json
